2012-01-19  WOnder93  <omosnacek@gmail.com>

	* Main.cs:
	  Fixed the UI grammar: no past perfect, past simple
	  everywhere.

	* AssemblyInfo.cs:
	  

2012-01-19  WOnder93  <omosnacek@gmail.com>

	* Main.cs:
	* AssemblyInfo.cs:
	  Global code reformatting.
	Updated copyright year.
	Various small fixes.
	Added some documentation.

2012-01-15  WOnder93  <omosnacek@gmail.com>

	* Main.cs:
	  Fixed visual session password exposition when replacing a
	  player in a session.

	* AssemblyInfo.cs:
	  

2012-01-04  WOnder93  <omosnacek@gmail.com>

	* Bang# Test Client.csproj:
	  

2012-01-03  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	* Bang# Test Client.csproj:
	  

	* Main.cs:
	  Moved connecting under the main 'try' block to handle
	  remoting exceptions.

2011-12-30  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* Main.cs:
	  Added interface version and operation system information
	  printing on startup.

2011-10-28  WOnder93  <omosnacek@gmail.com>

	* Bang# Test Client.csproj:
	  Migrated to Mono/.NET 4.0
	Updated to comply with the new C# standard.

2011-09-28  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* Main.cs:
	  Adapted to the new interface.

2011-09-20  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* Main.cs:
	  Added error messages when session or game control is not
	  available.

2011-09-19  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	* Bang# Test Client.csproj:
	  

	* Main.cs:
	  Added new base for "proxy characters" (like Vera Custer,
	  Greygory Deck).
	Added new response method.
	Added new RequestType values.
	Added new PublicPlayerView property - AdditionalCharacters
	  (the abilities gained by proxy characters).
	New way of getting player victory stats.

2011-09-15  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	* Bang# Test Client.csproj:
	  

	* Main.cs:
	  Edited to comply with the changes in Bang# Console Utils.

2011-09-10  WOnder93  <omosnacek@gmail.com>

	* Main.cs: